# tetris-wasm

./: .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
crate/: Cargo.toml
crate/src/: controll.rs  data.rs  func.rs  lib.rs  state.rs  store.rs  util.rs
crate/src/render/web/: mod.rs  util.rs
crate/src/render/web/context_2d/: block.rs  hud.rs  mod.rs  util.rs
crate/src/renderer/web/: mod.rs
crate/src/renderer/web/context_2d/: block.rs  hud.rs  mod.rs  renderer.rs
crate/src/state/: complete.rs  game.rs  mod.rs  movable.rs  move.rs
crate/src/store/: _dynamics.rs  dynamic.rs  dynamics.rs  static.rs  statics.rs
crate/src/store/dynamics/: block.rs  delete.rs  field.rs  level.rs  manager.rs  mod.rs  queue.rs  queue_field.rs
crate/src/store/dynamics/render/: element.rs  field.rs  get_target.rs  layout.rs  mod.rs
crate/src/web/: util.rs
src/: index.html
src/ts/: index.ts
