[package]
name = "test"
version = "0.1.0"
authors = ["Hajime-san"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libmath = "0.1.4"
rand = "0.6.5"
wasm-bindgen = "0.2.56"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]

[[bin]]
name = "func"
path = "src/func.rs"

[[bin]]
name = "data"
path = "src/data.rs"

[[bin]]
name = "state"
path = "src/state.rs"

[[bin]]
name = "controll"
path = "src/controll.rs"
