[package]
name = "test"
version = "0.1.0"
authors = ["Hajime-san"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libmath = "0.1.4"
arraytools = "0.1.5"
rand = "0.6.5"
wasm-bindgen = "0.2.56"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]
