[package]
name = "test"
version = "0.1.0"
authors = ["Hajime-san"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
libmath = "0.1.4"
arraytools = "0.1.5"
rand = "0.6.5"
wasm-bindgen = "0.2.56"
js-sys = "0.3.39"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Path2d',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
  'EventTarget',
  'KeyboardEvent'
]
